--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -645,6 +645,8 @@ button {
 }
 
 .demo {
+  padding-top: 69px;
+  padding-top: 3.83333rem;
   min-height: 100%;
   counter-reset: demo;
 }
